resolved some layout issues

--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
 html, body{
-	margin: 0 auto;
+	margin: 0;
 	height: 100%;
 	width: 100%;
-	-webkit-font-smoothing: antialiased;
-	word-wrap: break-word;
-}
-
-.page-wrap {
-width: 100%;
-margin: 0 auto;
-position: relative;
 }
 
 .w3-allerta {
@@ -20,41 +12,51 @@ position: relative;
 }
 
 #left {
-	position: absolute;
-	left: 0;
+	position: relative;
+	display: inline-block;
+	float: left;
+	left: 0%;
 	width: 50%;
 	height: 100vh;
 	background-color: #131418;
 	color: white;
+	margin:0;
+	overflow: hidden;
 }
 
 #name {
+	position: absolute;
+	/*display: inline-flex;*/
 	margin-top: 3%;
 	margin-left: 10%;
 	justify-content: center;
-	font-size: 30px;
+	font-size: 25px;
 }
 
 #dot {
+	/*position: absolute;*/
+	/*display: inline-flex;*/
 	color: #ef473a;
-	font-size: 40px;
+	font-size: 35px;
 }
 
 #title {
 	color: #FAFAFA;
 	text-shadow: 1px 1px 2px #ef473a, 0 0 25px #ef473a, 0 0 5px #cb2d3e;
 	line-height: 1;
-	font-size: 60px;
+	font-size: 50px;
 }
 
 #content {
-	margin-left: 10%;
+	position: absolute;
+	/*display: flex;*/
+	left: 10%;
 	color: #EEEEEE;
 	line-height: 1.6;
-	font-size: 25px;
+	font-size: 20px;
 	font-weight: normal;
-	margin-top: 32%;
-	margin-right: 16%;
+	top: 35%;
+	right: 16%;
 }
 
 .btn {
@@ -73,22 +75,26 @@ position: relative;
 }
 
 
-#social-icons {
+/*#social-icons {
 	position: absolute;
-	margin-left: 4%;
-	margin-top: 10%;
-}
+	display: inline-flex;
+	top:500px;
+}*/
 
 ul {
+	top: 90%;
+    left: 10%;
+	padding: 0;
+    margin: 0;
+	position: absolute;
+	display: inline-flex;
 	list-style: none;
-	display: flex;
 	justify-content: center;
-	margin-top: 30%;
 }
 
 li {
 	padding: 20px;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 a {
@@ -104,14 +110,17 @@ a {
 }
 
 #stay-in-touch {
-	font-size: 18px;
-	font-family: "Lobster", serif;
-	color: #EEEEEE;
+	 margin-top: 21px;
+	 font-size: 18px;
+	 font-family: "Lobster", serif;
+	 color: #EEEEEE;
 }
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 #right {
-	position: absolute;
-	left: 50%;
+	position: relative;
+	display: inline-block;
+	float: right;
+	margin:0;
 	width: 50%;
 	height: 100vh;
 	background: linear-gradient(to right, #cb2d3e, #ef473a);
